[package]
name = "cc2600"
version = "0.1.9"
edition = "2021"
authors = ["Bruno STEUX <bruno.steux@gmail.com>"]
license = "GPL-3.0-or-later"
description = "a subset of C compiler for Atari 2600"
readme = "README.md"
homepage = "https://github.com/steux/cc2600"
repository = "https://github.com/steux/cc2600"
keywords = ["cli", "atari2600", "compiler", "gamedev"]
categories = ["command-line-utilities", "game-development", "compilers"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
pest = "2.5"
pest_derive = "2.5"
regex = "1.7"
