[package]
name = "cc2600"
version = "0.4.3"
edition = "2021"
authors = ["Bruno STEUX <bruno.steux@gmail.com>"]
license = "GPL-3.0-or-later"
description = "a subset of C compiler for Atari 2600"
readme = "README.md"
homepage = "https://github.com/steux/cc2600"
repository = "https://github.com/steux/cc2600"
keywords = ["cli", "atari2600", "compiler", "gamedev"]
categories = ["command-line-utilities", "game-development", "compilers"]

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
regex = "1"
cc6502 = { version = "1.0", features = ["atari2600"] }
#cc6502 = { path = "../cc6502", features = ["atari2600"] } 
